--- a/index.html
+++ b/index.html
@@ -148,28 +148,32 @@
             <div class="row py-4">
                 <div class="col-md-3 ">
                     <img src="/img/Image 2.jpg" class="img-fluid mb-3" alt="Image of Project maneger">
-                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet consectetur
+                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Assumenda, fuga perspiciatis id reprehenderit debitis sint.</a>
                     <p class="project-detail font-weight-bolder">Complete,10:45</p>
                 </div>
                 <div class="col-md-3">
                     <img src="/img/Image 3.jpg" class="img-fluid  mb-3" alt="Image of Project maneger">
-                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet consectetur
+                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Assumenda, fuga perspiciatis id reprehenderit debitis sint.</a>
                     <p class="project-detail font-weight-bolder">Processing,10:45</p>
                 </div>
                 <div class="col-md-3">
                     <img src="/img/Image 5.jpg" class="img-fluid  mb-3" alt="Image of Project maneger">
-                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet consectetur
+                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Assumenda, fuga perspiciatis id reprehenderit debitis sint.</a>
                     <p class="project-detail font-weight-bolder">Complete,09:45</p>
                 </div>
                 <div class="col-md-3">
                     <img src="/img/Image 3.jpg" class="img-fluid  mb-3" alt="Image of Project maneger">
-                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet consectetur
+                    <a class="link text-dark project-link font-weight-bolder" href="#">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Assumenda, fuga perspiciatis id reprehenderit debitis sint.</a>
                     <p class="project-detail font-weight-bolder">Processing,10:46</p>
@@ -184,19 +188,19 @@
             <div class="row py-5">
                 <div class="col-md-3 text-center text-white">
                     <span class="countdown-span">120</span>
-                    <h2 class="countdown-head" >Failed Attempt</h2>
+                    <h2 class="countdown-head">Failed Attempt</h2>
                 </div>
                 <div class="col-md-3 text-center text-white">
                     <span class="countdown-span">90</span>
-                    <h2 class="countdown-head" >Failed Attempt</h2>
+                    <h2 class="countdown-head">Failed Attempt</h2>
                 </div>
                 <div class="col-md-3 text-center text-white">
                     <span class="countdown-span">70</span>
-                    <h2 class="countdown-head" >Failed Attempt</h2>
+                    <h2 class="countdown-head">Failed Attempt</h2>
                 </div>
                 <div class="col-md-3 text-center text-white">
                     <span class="countdown-span">100</span>
-                    <h2 class="countdown-head" >Failed Attempt</h2>
+                    <h2 class="countdown-head">Failed Attempt</h2>
                 </div>
             </div>
         </div>
@@ -205,9 +209,9 @@
     <div class="container" id="Portfolio">
         <div class="row">
             <div class="col py-5 text-center">
-              <h2 class="font-weight-bolder portfolio-head redtype-color">Portfolio</h2>
+                <h2 class="font-weight-bolder portfolio-head redtype-color">Portfolio</h2>
             </div>
-          </div>
+        </div>
         <div class="row py-5">
             <div class="col-md-4">
                 <div class="card">
@@ -260,7 +264,7 @@
         <div class="container">
             <div class="row">
                 <div class="col py-5 text-center">
-                  <h2 class="font-weight-bolder portfolio-head redtype-color">Gallery</h2>
+                    <h2 class="font-weight-bolder portfolio-head redtype-color">Gallery</h2>
                 </div>
             </div>
             <div class="row">
@@ -290,7 +294,8 @@
                 <div class="col-md-3">
                     <img src="/img/Image 5.jpg" class="img-fluid" alt="Randow Image">
                 </div>
-            </div><div class="row pb-5">
+            </div>
+            <div class="row pb-5">
                 <div class="col-md-3 pe-1">
                     <img src="/img/Image 5.jpg" class="img-fluid" alt="Randow Image">
                 </div>
@@ -311,35 +316,36 @@
         <div class="contact mt-4" id="Contact">
             <div class="row py-4">
                 <div class="col text-dark  text-center m-auto">
-                  <h2 class="font-weight-bold contact-head">Get In Touch</h2>
-                  <p class="contact-detail">I can be totally stalked online. Give me a shout-out</p>
+                    <h2 class="font-weight-bold contact-head">Get In Touch</h2>
+                    <p class="contact-detail">I can be totally stalked online. Give me a shout-out</p>
                 </div>
-              </div>
-              <div class="row pb-3">
+            </div>
+            <div class="row pb-3">
                 <div class="col text-dark">
-                  <h4>Shoot a message!</h4>
+                    <h4>Shoot a message!</h4>
                 </div>
-              </div>
-              <form action="backend.php" id="Contact" class="mb-5">
+            </div>
+            <form action="backend.php" id="Contact" class="mb-5">
                 <div class="row pb-3">
-                  <div class="col-md-6">
-                    <input type="text" class="form-control inner-form" placeholder="Your Name">
-                  </div>
-                  <div class="col-md-6">
-                    <input type="text" class="form-control inner-form" placeholder="Your Email">
-                  </div>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control inner-form" placeholder="Your Name">
+                    </div>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control inner-form" placeholder="Your Email">
+                    </div>
                 </div>
                 <div class="row pb-3">
-                  <div class="col">
-                    <textarea name="" class="form-control inner-form" id="" cols="30" rows="5" placeholder="Your Message" ></textarea>
-                  </div>
+                    <div class="col">
+                        <textarea name="" class="form-control inner-form" id="" cols="30" rows="5"
+                            placeholder="Your Message"></textarea>
+                    </div>
                 </div>
                 <div class="row pb-4">
-                  <div class="col">
-                    <button type="button" class="btn button-color py-3 ">Send Message</button>
-                  </div>
+                    <div class="col">
+                        <button type="button" class="btn button-color py-3 ">Send Message</button>
+                    </div>
                 </div>
-              </form>
+            </form>
         </div>
     </div>
     <!-- this is footer section -->
@@ -348,7 +354,7 @@
             <div class="container">
                 <div class="row py-5">
                     <div class="col text-center">
-                      <em class="footer-text">Work hard in silence, let your success be your noise</em>
+                        <em class="footer-text">Work hard in silence, let your success be your noise</em>
                         <p class="footer-detail">Frank Ocean</p>
                     </div>
                 </div>
@@ -371,12 +377,11 @@
                         </div>
                     </div>
                 </div>
-                </div>
-                <hr>
-                <div class="container">
+            </div>
+            <hr>
+            <div class="container">
                 <div class="row">
-                    <div class="col text-center"
-                        <p>&copy;All Right Reserved To Md Khabir Uddin(Sajib)</p>
+                    <div class="col text-center" <p>&copy;All Right Reserved To Md Khabir Uddin(Sajib)</p>
                     </div>
                 </div>
             </div>
